Added getRounds to open-api
